style.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body {
    display: grid;
    grid-template: repeat(4, 1fr) / repeat(4, 1fr);
    grid-template-areas: 
    "sidebar header header header"
    "sidebar main-content main-content main-content"
    "sidebar main-content main-content main-content"
    "sidebar main-content main-content main-content";
}

.header {
    grid-area: header;
    padding-left: 10px;
    box-shadow: 0px 6px 8px -6px rgb(210, 210, 210);
}

.sidebar {
    grid-area: sidebar;
}

.main-content {
    grid-area: main-content;
}

.first-part-header {
    display: grid;
    grid-template-columns: 70% 30%;
    margin-top: 8px;
}

.search-bar {
    display: grid;
    grid-template-columns: 7% 93%;
    align-items: center;
    column-gap: 10px;
}

input[type="search"] {
    width: 75%;
    height: 1.5rem;
    justify-self: start;
    border: none;
    border-radius: 12px;
    appearance: none;
    padding: 12px;
    height: 20px;
    background-color: rgb(226, 226, 226);
}

.search-icon {
    justify-self: end;
}

.user-info {
    display: flex;
    justify-content: center;
    gap: 30px;
    align-items: center;
    padding: 4px;
 
}

.user-info p {
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    font-weight: 700;
    font-size: 0.9em;
}

.second-part-header {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
}

.buttons {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
    justify-items: center;
    align-items: center;
}

.buttons button {
    border: none;
    padding: 4px 10px;
    border-radius: 30px;
    background-color: rgb(64, 144, 210);
    color: white;
    height: 40%;
    width: 60%;
    font-weight: 500;

}

.welcome {
    display: grid;
    grid-template-columns: 1fr 3fr;
    gap: 5px;
    margin-top: 20px;
    margin-bottom: 10px;
    font-weight: 500;
    
}

.welcome img {
    border-radius: 30px;
}

.user-profile-img {
    display: grid;
    align-items: center;
    justify-items: end;
}

.text {
    border: 4px solid green;
}

.larger-text {
    margin-top: 5px;
    font-size: 1.5em;
}

